Create a working remote class loader